force-app/main/default/objects/Commissioning_Equipment__c/Commissioning_Equipment__c.object-meta.xml
<CustomObject>
    <label>Commissioning tool</label>
    <nameField>
        <label>Commissioning Equipment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commissioning tools</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>