force-app/main/default/objects/Commissioning_Equipment__c/fields/Calibration_Valid__c.field-meta.xml
<CustomField>
    <fullName>Calibration_Valid__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Date when Calibration expires</description>
    <label>Calibration Valid</label>
    <type>Date</type>
</CustomField>