force-app/main/default/objects/Commissioning_Equipment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NOT CALIBRATED</fullName>
                <default>true</default>
                <label>NOT CALIBRATED</label>
            </value>
            <value>
                <fullName>&lt; 3 Months to expire</fullName>
            </value>
            <value>
                <fullName>CALIBRATED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>