force-app/main/default/objects/Commissioning_Equipment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Status__c</columns>
    <columns>Serial_Number__c</columns>
    <columns>Calibration_Valid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>